Added verification of method exection